ops/tests/compile_fail/unsupported.stderr
error: custom attribute panicked
 --> tests/compile_fail/unsupported.rs:5:1
  |
5 | #[op(fast)]
  | ^^^^^^^^^^^
  |
  = help: message: op cannot be a fast api. enforced by #[op(fast)]

error: custom attribute panicked
  --> tests/compile_fail/unsupported.rs:10:1
   |
10 | #[op(fast)]
   | ^^^^^^^^^^^
   |
   = help: message: op cannot be a fast api. enforced by #[op(fast)]

error: custom attribute panicked
  --> tests/compile_fail/unsupported.rs:15:1
   |
15 | #[op(fast)]
   | ^^^^^^^^^^^
   |
   = help: message: op cannot be a fast api. enforced by #[op(fast)]

error: custom attribute panicked
  --> tests/compile_fail/unsupported.rs:20:1
   |
20 | #[op(fast)]
   | ^^^^^^^^^^^
   |
   = help: message: async op cannot be a fast api. enforced by #[op(fast)]
